tests/src/errors/methodDestructure/map.spec.2.ts
{
	const arr = new Map([
		[1, 2],
		[3, 4],
	]);
	const b = arr["isEmpty"];
}
export {};
